--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <aside class="sidebar " data-sidebar>
             <div class="sidebar-info">
                 <figure class="avatar-box">
-                    <img src="download.png" alt="avatar" width="80">
+                    <img src="/pictures/download.png" alt="avatar" width="80">
                 </figure>
 
                 <div class="info-content">
-                    <h1 class="name" title="Richard Hanrick">Suraj Singh Bayas</h1>
+                    <h1 class="name" title="surajbayas">Suraj Singh Bayas</h1>
                     <p class="title">AI Developer</p>
                 </div>
 
@@ -38,7 +38,7 @@
                         <div class="contact-info">
                             <p class="contact-title">Email</p>
 
-                            <a href="mailto:richard@example.com" class="contact-link">surajyou45@gmail.com</a>
+                            <a href="mailto:surajyou45@example.com" class="contact-link">surajyou45@gmail.com</a>
                         </div>
                     </li>
 
@@ -118,7 +118,7 @@
                     <ul class="service-list">
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="ai.png" alt="icon" width="40">
+                                <img src="pictures/ai.png" alt="icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -128,7 +128,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="webd.png" alt="icon" width="40">
+                                <img src="pictures/webd.png" alt="icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -139,7 +139,7 @@
 
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="web.png" alt="icon" width="40">
+                                <img src="pictures/web.png" alt="icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -149,7 +149,7 @@
                         </li>
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="nlp.png" alt="icon" width="40">
+                                <img src="pictures/nlp.png" alt="icon" width="40">
                             </div>
 
                             <div class="service-content-box">
@@ -160,7 +160,7 @@
                         
                         <li class="service-item">
                             <div class="service-icon-box">
-                                <img src="data.png" alt="icon" width="40">
+                                <img src="/pictures/data.png" alt="icon" width="40">
                             </div>
 
                             <div class="service-content-box">
