--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div class="contact-info">
                             <p class="contact-title">Email</p>
 
-                            <a href="mailto:surajyou45@gmail.com" class="contact-link">surajyou45@gmail.com</a>
+                            <a href="mailto:surajbayas.me@gmail.com" class="contact-link">surajbayas.me@gmail.com</a>
                         </div>
                     </li>
 
@@ -605,7 +605,7 @@
                             </li>
                             <li class="contact-item">
                                 <ion-icon name="mail-outline"></ion-icon>
-                                <span><a style="text-decoration: none; color: var(--light-gray);;" href="mailto:surajyou45@gmail.com">surajyou45@gmail.com</a></span>
+                                <span><a style="text-decoration: none; color: var(--light-gray);;" href="mailto:surajbayas.me@gmail.com">surajbayas.me@gmail.com</a></span>
                             </li>
                             <li class="contact-item">
                                 <ion-icon name="location-outline"></ion-icon>
@@ -619,7 +619,7 @@
                 </article>
                 </div>
           </main>
-        
+    <audio id="audio" src="https://assets.mixkit.co/sfx/2021/06/03/1810/short-notification-alert-tone.mp3"></audio>
     </main>
     
     <script>
