--- a/index.html
+++ b/index.html
@@ -454,18 +454,18 @@
                     <ul class="skills-list content-card">
                         <li class="skills-item">
                             <div class="title-wrapper">
-                                <h5 class="h5">Artificial Intelligence Development</h5>
-                                <data value="85">85%</data>
+                                <h5 class="h5">Web Frontend Development</h5>
+                                <data value="90">90%</data>
                             </div>
 
                             <div class="skills-progress-bg">
-                                <div class="skills-progress-fill" style="width: 85%;"></div>
+                                <div class="skills-progress-fill" style="width: 90%;"></div>
                             </div>
                         </li>
 
                         <li class="skills-item">
                             <div class="title-wrapper">
-                                <h5 class="h5">Machine Learning</h5>
+                                <h5 class="h5">Python Programming</h5>
                                 <data value="80">80%</data>
                             </div>
 
@@ -476,7 +476,7 @@
 
                         <li class="skills-item">
                             <div class="title-wrapper">
-                                <h5 class="h5">Deep Learning</h5>
+                                <h5 class="h5">C</h5>
                                 <data value="75">75%</data>
                             </div>
 
@@ -487,7 +487,7 @@
 
                         <li class="skills-item">
                             <div class="title-wrapper">
-                                <h5 class="h5">Data Analysis</h5>
+                                <h5 class="h5">Java</h5>
                                 <data value="90">90%</data>
                             </div>
 
