--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suraj Bayas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="https://i.postimg.cc/bN9kqHBf/download.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/pictures/download.png" type="image/x-icon">
 </head>
 <body>
     <main>
