--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                         <ul class="contact-list">
                             <li class="contact-item">
                                 <ion-icon name="call-outline"></ion-icon>
-                                <span>+91 8080971236</span>
+                                <span ><a style="text-decoration: none; color: var(--light-gray);;"href="tel:+918080971236" class="contact-link">+91 8080971236</a></span>
                             </li>
                             <li class="contact-item">
                                 <ion-icon name="mail-outline"></ion-icon>
