--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suraj Bayas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/pictures/download.png" type="image/x-icon">
+        <link rel="shortcut icon" href="/pictures/download.png" type="image/x-icon">
+        <link rel="canonical" href="https://glitch-hello-website.glitch.me/" />
+        <meta name="description" content="A simple website, built with Glitch. Remix it to get your own."/>
+        <meta name="robots" content="index,follow" />
+        <meta property="og:title" content="Hello World!" />
+        <meta property="og:type" content="article" />
+        <meta property="og:url" content="https://glitch-hello-website.glitch.me/" />
+        <meta property="og:description" content="A simple website, built with Glitch. Remix it to get your own."/>
+        <meta property="og:image" content="https://cdn.glitch.com/605e2a51-d45f-4d87-a285-9410ad350515%2Fhello-website-social.png?v=1616712748147"/>
+        <meta name="twitter:card" content="summary" />
 </head>
 <body>
     <main>
