--- a/index.html
+++ b/index.html
@@ -546,6 +546,20 @@
                                 <p class="project-category">NLP</p>
                             </a>
                         </li>
+                        <li class="project-item active" data-filter-item data-category="ai">
+                            <a href="https://github.com/SurajsinghBayas/AI-Agents">
+                                <figure class="project-img">
+                                    <div class="project-item-icon-box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+
+                                    <img src="/projects/Playground.png.png" alt="chat bot" loading="lazy">
+                                </figure>
+
+                                <h3 class="project-title">WEB & FINANCE AI-Agents</h3>
+                                <p class="project-category">AI</p>
+                            </a>
+                        </li>
 
                         <li class="project-item active" data-filter-item data-category="web development">
                             <a href="#">
