project image updated

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
 
-                                    <img src="/projects/Playground.png.png" alt="chat bot" loading="lazy">
+                                    <img src="/projects/Playground.png" alt="AI agent" loading="lazy">
                                 </figure>
 
                                 <h3 class="project-title">WEB & FINANCE AI-Agents</h3>
