--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <h1 class="name" title="surajbayas">Suraj Singh Bayas</h1>
                     <p class="title">AI Developer</p>
                 </div>
+                <button class="resumebutton" onclick="location.href='surajbayas.pdf'">RESUME</button>
 
                 <button class="info-more-btn" data-sidebar-btn>
                     <span>Show Contacts</span>
@@ -383,7 +384,8 @@
                 <header>
                     <h2 class="h2 article-title">Resume</h2>
                 </header>
-
+                <button style="margin-bottom: 30px;" class="resumebutton" onclick="location.href='surajbayas.pdf'">DOWNLOAD RESUME</button>
+            
                 <section class="timeline">
                     <div class="title-wrapper">
                         <div class="icon-box"><ion-icon name="book-outline"></ion-icon></div>
@@ -428,21 +430,21 @@
 
                     <ol class="timeline-list">
                         <li class="timeline-item">
-                            <h4 class="h4 timeline-item-title">AL/ML Volunteer<span><a href="https://gdg.community.dev/gdg-on-campus-nagesh-karajgi-orchid-college-of-engineering-technology-solapur-india/" style="color: #ffdb70;">GDG on Campus Nagesh Karajgi Orchid College of Engineering & Technology</span></a></h4>
+                            <h4 class="h4 timeline-item-title">AL/ML Volunteer<span><a href="https://gdg.community.dev/gdg-on-campus-nagesh-karajgi-orchid-college-of-engineering-technology-solapur-india/" style="color: #429eef;">GDG on Campus Nagesh Karajgi Orchid College of Engineering & Technology</span></a></h4>
                             <span>2024 - 2025</span>
-                            <p class="timeline-text">As an AI/ML Volunteer at GDG on Campus, I contributed to events promoting innovation in AI and machine learning, enhancing my technical skills and community engagement.
+                            <p  class="timeline-text">As an AI/ML Volunteer at GDG on Campus, I contributed to events promoting innovation in AI and machine learning, enhancing my technical skills and community engagement.
                             </p>
                         </li>
 
                         <li class="timeline-item">
-                            <h4 class="h4 timeline-item-title">Academic Affairs Officer<span><a href="https://www.linkedin.com/company/artificial-intelligence-alliance-student-association" style="color: #ffdb70;">Artificial Intelligence Alliance Student Association</span></a></h4>
+                            <h4 class="h4 timeline-item-title">Academic Affairs Officer<span><a href="https://www.linkedin.com/company/artificial-intelligence-alliance-student-association" style="color: #429eef;">Artificial Intelligence Alliance Student Association</span></a></h4>
                             <span>2024 - 2025</span>
                             <p class="timeline-text">As an Academic Affairs Officer at the Artificial Intelligence Alliance Student Association, I facilitated academic initiatives, supported knowledge sharing, and helped organize events to promote learning in AI and related fields.
                             </p>
                         </li>
 
                         <li class="timeline-item">
-                            <h4 class="h4 timeline-item-title">Techincal Lead<span><a href="https://www.instagram.com/nkocet_astronomy_club/" style="color: #ffdb70;">Astronomy Club NKOCET</span></a></h4>
+                            <h4 class="h4 timeline-item-title">Techincal Lead<span><a href="https://www.instagram.com/nkocet_astronomy_club/" style="color: #429eef;">Astronomy Club NKOCET</span></a></h4>
                             <span>2023 - 2024</span>
                             <p class="timeline-text">As the Technical Lead of the Astronomy Club at NKOCET, I guided technical projects, organized stargazing events, and promoted interest in astronomy and space science among peers.
                             </p>
