--- a/index.html
+++ b/index.html
@@ -634,7 +634,17 @@
                     <section class="contact">
                         <div class="title-wrapper">
                             <div class="icon-box"><ion-icon name="mail-outline"></ion-icon></div>
-                            <h3 class="h3">Contact</h3>
+                            <h3 class="h3">Connect With Me</h3>
+                        </div>
+                        <div style="margin-bottom: 30px; display: flex; justify-content: flex-start; gap: 15px; margin-left: 10px;">
+                            <ul class="social-list" ></ul>
+                                <li class="social-item"><a href="https://www.linkedin.com/in/suraj-bayas-08a68020a/" class="social-link"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+                                <li class="social-item"><a href="https://github.com/SurajsinghBayas" class="social-link"><ion-icon name="logo-github"></ion-icon></a></li>
+                                <li class="social-item"><a href="https://x.com/SurajxB_" class="social-link"><ion-icon name="logo-twitter"></ion-icon></a></li>
+                                <li class="social-item"><a href="https://www.instagram.com/suraj.sky_/" class="social-link"><ion-icon name="logo-instagram"></ion-icon></a></li>
+                                <li class="social-item"><a href="https://www.youtube.com/@SurajBayas" class="social-link"><ion-icon name="logo-youtube"></ion-icon></a></li>
+                                <li class="social-item"><a href="https://api.whatsapp.com/send/?phone=918080971236&text&type=phone_number&app_absent=0" class="social-link"><ion-icon name="logo-whatsapp"></ion-icon></a></li>
+                            </ul>
                         </div>
     
                         <ul class="contact-list">
