Added light mode

--- a/index.html
+++ b/index.html
@@ -96,7 +96,13 @@
                 </ul>
             </div>
         </aside>
-
+        <div>
+            <!-- Add this in your header or navigation area -->
+            <button id="theme-toggle" class="theme-toggle">
+                <ion-icon name="moon-outline" class="moon"></ion-icon>
+                <ion-icon name="sunny-outline" class="sun"></ion-icon>
+            </button>
+        </div>
         <div class="main-content">
             <nav class="navbar">
                 <ul class="navbar-list">
